JFoods: 09.12 - Challenge: Customizing Validation Messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,22 @@
-#NotBlank.restaurant.name=Restaurant name is required
-#NotBlank.cuisine.name=Cuisine name is required
-
 NotBlank={0} is required
-#NotBlank.name=Enter a name because it is required
+NotNull={0} is required
+PositiveOrZero=Must be a value greater than or equal to zero
 
-name=Name
+# Cuisine
+cuisine.id=Cuisine code
+cuisine.name=Cuisine name
+
+# Restaurant
+NotNull.restaurant.deliveryFee={0} is required
+NotNull.restaurant.cuisine={0} is required
 restaurant.name=Restaurant name
+restaurant.deliveryFee=Restaurant delivery fee
+restaurant.cuisine=Restaurant cuisine
+
+# State
+state.id=State code
+state.name=State name
+
+# City
+city.name=City name
+city.state=City state
