JFoods: 09.13 - Solving Validation Messages with Bean Validation Resource Bundle

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 NotBlank={0} is required
 NotNull={0} is required
-PositiveOrZero=Must be a value greater than or equal to zero
+#PositiveOrZero=Must be a value greater than or equal to zero
 
 # Cuisine
 cuisine.id=Cuisine code
