JFoods: 09.16 - Creating custom validation constraints with ConstraintValidator implementation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,9 @@
 NotBlank={0} is required
 NotNull={0} is required
+PositiveOrZero={0} must be a value greater than or equal to zero
+Multiple={0} must be a multiple value of {1}
 
-# PositiveOrZero=Must be a value greater than or equal to zero
-deliveryFee.invalid={0} is invalid
+# deliveryFee.invalid={0} is invalid
 
 # Cuisine
 cuisine.id=Cuisine code
