JFoods: 09.18 - Adjusting Exception Handler to add class level validation messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,8 +2,7 @@ NotBlank={0} is required
 NotNull={0} is required
 PositiveOrZero={0} must be a value greater than or equal to zero
 Multiple={0} must be a multiple value of {1}
-
-# deliveryFee.invalid={0} is invalid
+FreeDeliveryFeeIncludesDescription=The {1} must contain the description {3}
 
 # Cuisine
 cuisine.id=Cuisine code
